<resources>
    <string name="app_name">Paysmart</string>

    <string name="title">Paysmart</string>
    <string name="densoft">Densoft</string>
    <string name="enterstaffid">Staff Id</string>
    <string name="enterpassword">Password</string>
    <string name="login">Login</string>
    <string name="pleaseentercustomerid">Please enter the customer id!!</string>
    <string name="pleaseenterstaffid">Please enter the staff id!!</string>
    <string name="pleaseenterpassword">Please enter the password!!</string>
    <string name="myleaves">Leaves</string>
    <string name="myplanner">Planner</string>
    <string name="myattendancehistory">Attendance History</string>
    <string name="myteam">My Team</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="bunk">Bunk</string>
    <string name="leave">Leaves</string>
    <string name="late">Late</string>
    <string name="ontask">On Task</string>
    <string name="quickactions">Quick Actions</string>
    <string name="takehome">Take Home</string>
    <string name="deductions">Deductions</string>
    <string name="totalgrosspay">Total Gross Pay</string>
    <string name="payfor">Pay For</string>
    <string name="paiddays">Paid Days</string>
    <string name="view">View</string>
    <string name="apply">Apply</string>

    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_date">30</string>
    <string name="last_date">30</string>
    <string name="requestforleave">Request for Leave</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

    <string name="employeename">Employee Name</string>
    <string name="templates">Templates</string>
    <string name="dutiescoveredby">Applicant\'s Duties to be covered by</string>
    <string name="dateofleavefrom">Date of Leave (From)</string>
    <string name="dateofleaveto">Date of Leave (To)</string>
    <string name="days">Days</string>
    <string name="leavecode">Leave Code</string>
    <string name="description">Description</string>
    <string name="selectdate">Select Date</string>
    <string name="netpay">Net Pay</string>
    <string name="emailpayslip">Email Pay Slip</string>
    <string name="payslipfor">Your Pay Slip for</string>
    <string name="checkin">Check In</string>
    <string name="checkout">Check Out</string>
    <string name="checkintime">Checked In on</string>
    <string name="checkouttime">Checked Out on</string>
    <string name="gpsnotenabled">GPS is not enabled. Kindly enable it from the settings to proceed.</string>
    <string name="ok">Ok</string>
    <string name="pleasecontactbranch">Login failed. Please contact your branch</string>
    <string name="iwishtoapplyfor">I wish to apply for</string>
    <string name="selectgreaterdate">Please select a date greater than the date you have selected</string>
    <string name="welcome">Welcome</string>
    <string name="rs">₹</string>
    <string name="date">Date</string>
    <string name="intime">In Time</string>
    <string name="outtime">Out Time</string>
    <string name="thumbtime">Thumb Time</string>
    <string name="customerid">Customer Id</string>
    <string name="workinghours">Working Hours</string>
    <string name="overtime">OverTime</string>
    <string name="holidayname">Holiday Name</string>
    <string name="lateby">Late By</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="weekoff_holiday">WeekOff Holiday</string>
    <string name="takenleave">Taken Leave</string>
    <string name="workdone_onholiday">Workdone on Weekoff/Holiday</string>
    <string name="get_salaryslip">Get Salary Slip</string>
    <string name="leaveassigned">Leave Assigned</string>
    <string name="balanceleave">Balance Leave</string>
    <string name="reportto">Report To</string>
    <string name="cannotapplyforleaveinprobation">You Can\'t apply for leaves in your probation period</string>
    <string name="leavesnotremaining">You do not have sufficient leaves</string>
    <string name="pleasecontactadmin">Please contact Admin</string>
    <string name="receivedleaveapplication">We have received your leave application</string>
    <string name="nodataavailable">No data available for the selected year</string>
    <string name="notifications">Notifications</string>
    <string name="checkinsuccess">Checked in Successfully!!</string>
    <string name="checkoutsuccess">Checked out Successfully!!</string>
    <string name="selectcurrentmonth">Please Select current month</string>
    <string name="checkin_once">You can only Check In once in a day</string>
    <string name="checkout_once">You can only Check Out once in a day</string>
    <string name="unabletofindlocation">We are not able to get your location. Please try again later!</string>
    <string name="travel_claims">Travel Claims</string>
    <string name="track_me">Allow company to track me Live in office hours</string>
    <string name="pleasecheckinternet">Please check your Network</string>
    <string name="permission_rationale">Set Permissions</string>
    <string name="no_google_playservice_available">No google playservice available</string>
    <string name="title_alert_no_intenet">No internet</string>
    <string name="msg_alert_no_internet">Please check your internet connection</string>
    <string name="btn_label_refresh">Refresh</string>
    <string name="permission_denied_explanation">Permission denied. Please allow permissions</string>
    <string name="settings">Go to Settings</string>
    <string name="leaves_available">Available Leaves</string>
    <string name="leave_request_status">Leave Request Status for</string>
    <string name="cannotcheckout">Please Check In first</string>
    <string name="error">Error submitting the form. Please try again!</string>
    <string name="realtime_tracking">Realtime Tracking</string>
    <string name="alert_message_for_tracking">We will track you only when we send you out during office hours. Are you OK with that?</string>
    <string name="alert_message_for_stoptracking">Are you sure you want to stop being tracked?</string>
    <string name="live_tracking_started">Live Tracking started</string>
    <string name="live_tracking_stopped">Live Tracking stopped</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="select_mode_of_transport">Select Mode of Transport</string>
    <string name="resume_tracking">Resume Tracking</string>
    <string name="view_details">View Details</string>
    <string name="week_off">Week Off</string>
    <string name="select_branch">Select Branch</string>
    <string name="please_select">Please Select</string>
    <string name="please_select_branch">Please select the branch to proceed</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="onhold">On Hold</string>
    <string name="out_of_office_range">You are out of range of the office</string>
    <string name="unabletogetlocation">We are unable to get the location</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="putonhold">Put On Hold</string>
    <string name="notification_text">Your tracking is live</string>
    <string name="enable_location">Kindly enable your location for better tracking</string>
    <string name="unable_to_locate_user">We are unable to locate the staff at the moment. Please try in sometime</string>
    <string name="allowtrack">Kindly allow the company to track you!</string>

</resources>
