<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LiveTrackingActivity">

    <include
        layout="@layout/toolbar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_mode_of_transport"
                android:layout_gravity="center"
                android:layout_margin="2dp"/>

            <Spinner
                android:id="@+id/spinner_mode_of_transport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_trackme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/track_me"
            android:textAlignment="center"
            android:textColor="@color/blue2"
            android:background="@drawable/textview_rounded"
            android:padding="10dp"
            android:layout_margin="20dp"/>

        <ImageView
            android:id="@+id/iv_seemap"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/location"
            android:layout_gravity="center"
            android:padding="20dp"
            android:visibility="gone"/>

    </LinearLayout>


    <TextView
        android:id="@+id/tv_stoptracking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/stop_tracking"
        android:textColor="@color/blue2"
        android:background="@drawable/textview_rounded"
        android:padding="10dp"
        android:layout_margin="20dp"/>


</LinearLayout>