<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlannerActivityv1">

    <include
        layout="@layout/toolbar"/>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:fitsSystemWindows="false"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/constraintlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/iv_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:drawableRight="@drawable/history"
                android:drawablePadding="5dp"
                android:text="Check History"
                android:layout_gravity="end"
                android:textColor="@color/blue2"/>

            <com.densoftinfotech.densoftpaysmart.CalendarCustomView
                android:id="@+id/custom_calendar"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp">

            </com.densoftinfotech.densoftpaysmart.CalendarCustomView>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blue"/>

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@color/absent"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/absent"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"/>

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@color/present"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/present"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"/>

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@color/lateby"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lateby"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@color/weekoff_holiday"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/weekoff_holiday"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"/>

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@color/takenleave"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/takenleave"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"/>

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@color/overtime"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/overtime"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@color/workdone_onholiday"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/workdone_onholiday"
                        android:layout_marginLeft="5dp"/>



                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_planner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                tools:listitem="@layout/calendar_details_layout"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>